# MixedConv

./: .gitignore  README.md  pyproject.toml
configs/: experiment_config.yaml
data/prompts/: calibration.jsonl  dev.jsonl  sanity.jsonl
docs/: STEP_1_CLOUD.md
src/mixedconv/: __init__.py  baseline.py  checks.py  compare_runs.py  config.py  layers.py  runlog.py
tests/: test_config.py  test_layers.py
